[workspace]
members = [
    "anemo",
    "grpc",
    "component",
    "name_variant",
    "rccheck",
    "telemetry_subscribers",
    "typed-store",
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true

[patch.crates-io]
tonic = { git = 'https://github.com/bmwill/tonic.git', rev = "cb6f43ec70c493d21975aa41c6f0fc41a45c3f0e" }
