[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ed25519 = "1.4.0"
ed25519-dalek = "1.0.1"
rccheck = { path = "../rccheck" }
rcgen = "0.9.2"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
tokio-rustls = "0.23.3"
rand = "0.7.3"
webpki = { version = "0.22.0", features = ["alloc", "std"] }
x509-parser = "0.13.0"
tonic = { version = "0.7", features = ["tls", "compression"] }
# tonic = { path = "../../tonic/tonic", features = ["tls", "compression"] }
tower = { version = "0.4" }
tokio = { version = "1.17.0", features = ["sync", "rt", "macros"] }
prost = "0.10"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3.21"
hyper-rustls = { version = "0.23", features = ["http2"] }
http = "0.2"
http-body = "0.4.2"
hyper = { version = "0.14", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost", "compression"] }
prost-build = "0.10.1"
